--- a/style.css
+++ b/style.css
@@ -40,8 +40,6 @@
 }
 
 .modal .container .header h1 {
-    font-weight: 500;
-    color: #4d4d4d;
     padding: 0;
     margin: 0;
 }
@@ -73,6 +71,10 @@
     border: 1px solid #e6e9ec;
     margin-top: 15px;
     width: 100%;
+}
+
+.modal .container .header h1 {
+    @apply dark:text-white text-2xl font-bold;
 }
 
 /*.modal .container .footer {
