--- a/style.css
+++ b/style.css
@@ -203,5 +203,5 @@ div._e__fixed {
     transition: all 0.5s ease 0s;
 }
 div.nav--fixed {
-    @apply sticky top-0 z-50 shadow-lg rounded top-[8em] p-4;
+    @apply sticky top-0 z-50 rounded top-[8em];
 }
